--- a/runfield-mobile/index.html
+++ b/runfield-mobile/index.html
@@ -605,7 +605,7 @@
                 var rtxt = 'Record: ' + record;
                 var rw = ctx.measureText(rtxt).width;
                 ctx.fillText(rtxt, (800-rw-24*magF), 44*magF);
-                var overText = 'You Dead!.';
+                var overText = 'Secure your IoT networks!!.';
                 var gw = ctx.measureText(overText).width;
                 ctx.fillText(overText, (400-gw/2), 240*magF);
                 var againText = 'Click to Retry';
